<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginCard"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@color/whiteCardColorLogin">

<LinearLayout
    style="@style/linearParent"
    android:layout_gravity="center"
    android:padding="@dimen/loginViewsMargin">

    <TextView
        style="@style/headerTextPrimary"
        android:text="@string/register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            style="@style/modifiedEditText"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            style="@style/modifiedEditText"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/username"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            style="@style/modifiedEditText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            style="@style/modifiedEditText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            style="@style/modifiedEditText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/confirm_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="20dp"
        style="@style/loginButton"
        android:layout_gravity="center"
        android:text="@string/register" />

    <TextView
        android:id="@+id/sudahdaftar"
        style="@style/parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColorLogin"
        android:text="@string/sudah_punya_akun_klik_disini"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:gravity="center_horizontal" />
</LinearLayout>

</com.google.android.material.card.MaterialCardView>