<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginCard"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@color/whiteCardColorLogin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/bp"
            android:layout_centerInParent="true"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

    </RelativeLayout>

    <LinearLayout
        style="@style/linearParent"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/ubah_profil"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/ubah_nama"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/name"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/ubah_noHp"
                style="@style/modifiedEditText"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/no_handphone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/ubah_Alamat"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/alamat"
                />

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/simpan"
            android:layout_marginTop="20dp"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/simpan" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>