<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="1dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_produk"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/wortel"/>
        <LinearLayout
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_produk"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#505050"
                android:id="@+id/berat"
                android:text="@string/deskripsi"
                />

            <TextView
                android:textColor="#8F8F8F"
                android:textSize="16sp"
                android:id="@+id/tv_stok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12"/>
            <TextView
                android:textColor="@color/green"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:id="@+id/tv_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp_0"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>