<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginCard"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@color/whiteCardColorLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/modifiedEditText"
                android:maxLines="1"
                android:hint="@string/email"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/modifiedEditText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <TextView
            style="@style/viewParent"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:onClick="ForgotPassword"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:text="@string/belum_punya_akun" />
            <TextView
                android:id="@+id/daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/klik_disini"
                android:textColor="@color/green"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />
        </LinearLayout>
        <Button
            android:id="@+id/loginButton"
            style="@style/loginButton"
            android:text="@string/login"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/black"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:focusable="true" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pb"
            android:layout_centerInParent="true"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>