<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:orientation="vertical"
    tools:context=".fragments.Keranjang">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keranjang"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_keranjang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_above="@id/div_footer"
            />

        <LinearLayout
            android:background="@color/white"
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/div_footer"
            android:visibility="gone"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/note"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/produk_akan_dikirim_dalam_waktu_24_jam_setelah_konfirmasi_kami_hanya_menerima_cash_on_delivery_saat_ini"/>
        </LinearLayout>
        
        <RelativeLayout
            android:id="@+id/div_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_all"
                    android:textStyle="bold"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/btn_bayar"
                        android:orientation="vertical"
                        android:layout_marginRight="6dp"
                        android:layout_toStartOf="@id/btn_bayar">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/total"
                            android:layout_gravity="right"/>
                        <TextView
                            android:id="@+id/tv_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/rp_20_000"
                            android:textSize="16sp"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_bayar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout"
                        android:textStyle="bold"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>