<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_rawRes="@raw/success"
                app:lottie_autoPlay="true"
                app:lottie_speed="1.25"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/terima_kasih_transaksi_anda_berhasil_silahkan_meunggu_kofirmasi_dari_kami"
                android:padding="10dp"/>

                <Button

                    android:id="@+id/btnCD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belanja_lagi_yuk"/>
                <Button
                    android:id="@+id/btn_toRiwayat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/riwayat_belanja"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>