<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="5dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/isikeranjang"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="10dp">
            <ImageView
                android:id="@+id/img_produk"
                android:layout_width="100dp"
                android:src="@drawable/wortel"
                android:layout_height="100dp"
                android:background="@drawable/bgsayur"
                android:cropToPadding="true"
                android:adjustViewBounds="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wortel"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/tv_harga"
                    android:layout_width="100dp"
                    android:layout_height="16dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/rp_20_000"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp"
                        android:text="@string/jumlah"/>

                    <TextView
                        android:id="@+id/tv_jumlah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="marquee"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>